fixed spacing and final changes

--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ html {
     transform: rotate(4320deg);
 }
 
-.forward {
+.forwards {
     color: white;
     background-color: green;
     width: 6em;
@@ -63,6 +63,7 @@ html {
     display: inline-block;
     text-align: center;
     text-decoration: none;
+    margin 1em;
 }
 
 .backwards {
@@ -74,12 +75,19 @@ html {
     display: inline-block;
     text-align: center;
     text-decoration: none;
+    margin: 1em;
 }
 
-.forward:hover,
+.forwards:hover,
 .backwards:hover {
     background-color: white;
     color: black;
     transition: all .5s linear;
     opacity: 1;
+}
+
+.buttons {
+    text-align: center;
+    padding-bottom: 1em;
+    padding-top: 1em;
 }
